# learn-with-genai

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
backend/: .env.example  Makefile  pyproject.toml
backend/src/: main.py  models.py  settings.py
backend/src/logic/: ai_tutor.py  config_manager.py  projects_manager.py
backend/src/logic/ai_tutor/: ai_tutor.py  search.py  utils.py
backend/src/logic/ai_tutor/edges/: routing.py
backend/src/logic/ai_tutor/graphs/: main.py
backend/src/logic/ai_tutor/nodes/analysis/: query_analysis.py
backend/src/logic/ai_tutor/nodes/consent/: note_consent.py
backend/src/logic/ai_tutor/nodes/generation/: final_response.py  note_generation.py
backend/src/logic/ai_tutor/nodes/retrieval/: note_search.py
backend/src/logic/ai_tutor/state/: tutor_state.py
backend/src/prompts/: context_response.txt  context_response_user.txt  general_response.txt  general_response_user.txt  helpers.py  note_generation_system.txt  note_generation_user.txt  query_analysis_system.txt  query_analysis_user.txt  response_generation_system.txt  system_prompt.txt
backend/src/v1/: schema.py
backend/src/v1/routes/: __init__.py  ai_tutor.py  config.py  projects.py
frontend/: .prettierignore  package-lock.json  package.json
frontend/.next/: prerender-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: AIAssistant.tsx  MainLayout.tsx  Modals.tsx  Sidebar.tsx  TextEditor.tsx
(+73 files in other folders)
