[project]
name = "learn-with-genai"
version = "0.1.0"
description = ""
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.2",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.20",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "pandas>=2.3.0",
    "pydantic-settings>=2.9.1",
    "streamlit>=1.47.1",
    "uvicorn>=0.36.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
